Trying to fix assingment overlaps.

--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ figcaption {
   font-family: 'helvetica', 'arial', 'sans';
   padding: 20px 20px 20px 30px;
   width: 250px;
-  height: 400px;
+  height: 450px;
   float: left;
 }
 
